# newHero

./: README.md  launch.sh
rm_auto_aim/: README.md
rm_auto_aim/armor_detector/: CMakeLists.txt  README.md  package.xml
rm_auto_aim/armor_detector/cmake_modules/: FindG2O.cmake
rm_auto_aim/armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  ba_solver.cpp  graph_optimizer.cpp  light_corner_corrector.cpp  number_classifier.cpp
rm_auto_aim/armor_detector/test/: test_detector.cpp  test_node_startup.cpp
rm_auto_aim/armor_solver/: CMakeLists.txt  README.md  package.xml
rm_auto_aim/armor_solver/src/: armor_solver.cpp  armor_solver_node.cpp  armor_tracker.cpp
rm_auto_aim/armor_solver/test/: test_node_startup.cpp
rm_auto_aim/rm_auto_aim/: package.xml
rm_auto_outpost/: CMakeLists.txt
rm_auto_outpost/include/rm_auto_outpost/: outpost_solver.hpp  rm_auto_outpost_node.hpp
rm_auto_outpost/src/: outpost_solver.cpp  rm_auto_outpost_node.cpp
rm_bringup/: CMakeLists.txt  package.xml
rm_bringup/config/: camera_info.yaml  launch_params.yaml
rm_bringup/launch/: bringup.launch.py
rm_hardware_driver/ros2-hik-camera/: CMakeLists.txt
rm_interfaces/msg/: Armor.msg
src/rm_auto_aim/green_detector/: CMakeLists.txt  package.xml
src/rm_auto_aim/green_detector/include/green_detector/: green_detector.hpp  green_detector_node.hpp  types.hpp
src/rm_auto_aim/green_detector/src/: green_detector.cpp  green_detector_node.cpp
src/rm_auto_outpost/: CMakeLists.txt  package.xml
src/rm_interfaces/: CMakeLists.txt
src/rm_utils/: CMakeLists.txt
(+135 files in other folders)
